--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "luxon": "^3.5.0",
         "moment": "^2.30.1",
+        "pinia": "^3.0.1",
         "vue3-toastify": "^0.2.3"
     }
 }
